--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,7 @@
         height: 100%;
         display: block;
       }
+      /* try to fix bug */
       /* try to handle mobile dialog */
       canvas + * {
         z-index: 2;
