--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>1'AM</title>
+    <title>MoSpace</title>
     <style>
       html {
         box-sizing: border-box;
@@ -25,7 +25,6 @@
         height: 100%;
         display: block;
       }
-      /* try to fix bug */
       /* try to handle mobile dialog */
       canvas + * {
         z-index: 2;
